@@ -65,6 +65,12 @@ def set_unity_env ():
     except:
       pass
 
+    try:
+      if subprocess.check_output('gsettings get com.canonical.Unity lowgfx'.split()) == b'true\n':
+        os.environ['COMPIZ_CONFIG_PROFILE'] = 'ubuntu-lowgfx'
+    except:
+      pass
+
     if not 'DISPLAY' in os.environ:
         # take an optimistic chance and warn about it :)
         print("WARNING: no DISPLAY variable set, setting it to :0")
